# gst-urishmsrc

./: .gitignore  COPYING  ChangeLog  README  configure.ac
src/: Makefile.am  gsturishmsrc.c  gsturishmsrc.h
